--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -15,7 +15,7 @@ PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL_RUNTIME_init_manager = "sysvinit"
 
 # To change kernel version
-PREFERRED_VERSION_linux-stable = "4.4.33"
+PREFERRED_VERSION_linux-stable = "4.4.%"
 
 MACHINE = "beaglebone"
 
