--- a/recipes-kernel/linux/linux-stable-4.4/dts/bbb-4dcape43t.dts
+++ b/recipes-kernel/linux/linux-stable-4.4/dts/bbb-4dcape43t.dts
@@ -145,6 +145,9 @@
 
 	adc {
 		ti,adc-channels = <4 5 6 7>;
+		ti,chan-step-opendelay = <0x2000 0x2000 0x2000 0x2000>; /* default 0x98, max 0x3ffff */
+		ti,chan-step-sampledelay = <0x10 0x10 0x10 0x10>;       /* default 0, max 0xff */
+		ti,chan-step-avg = <16 16 16 16>;                       /* default 16, range 0-16 */
 	};
 };
 
