machine/beaglebone.conf : Keep linux-stable as default kernel

--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -10,8 +10,8 @@ DEFAULTTUNE ?= "cortexa8hf-neon"
 require conf/machine/include/soc-family.inc
 require conf/machine/include/tune-cortexa8.inc
 
-#PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
-PREFERRED_PROVIDER_virtual/kernel = "ti-linux"
+PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
+#PREFERRED_PROVIDER_virtual/kernel = "ti-linux"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 PREFERRED_PROVIDER_u-boot = "u-boot"
