--- a/recipes-kernel/linux/linux-stable-4.9/dts/bbb-spi0-spidev.dtsi
+++ b/recipes-kernel/linux/linux-stable-4.9/dts/bbb-spi0-spidev.dtsi
@@ -24,7 +24,7 @@
 	pinctrl-0 = <&spi0_pins>;
 
 	spidev0_0: spidev0@0 {
-		compatible = "generic,spi";
+		compatible = "spidev";
 		reg = <0>;
 		spi-max-frequency = <12000000>;
 		/* spi-cpha; sets CPHA=1, default is CPHA=0 */
