--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Local configuration for meta-bbb images
-# Yocto Project 2.2 Poky distribution [morty] branch
+# Yocto Project 2.3 Poky distribution [pyro] branch
 # This is a sysvinit system
 
 LICENSE_FLAGS_WHITELIST = "commercial"
@@ -23,14 +23,14 @@ MACHINE = "beaglebone"
 
 #SSTATE_DIR = "/oe7/bbb/sstate-cache"
 
-#TMPDIR = "/oe7/bbb/tmp-morty"
+#TMPDIR = "/oe7/bbb/tmp-pyro"
 
 DISTRO = "poky"
 
 PACKAGE_CLASSES = "package_ipk"
 
 # i686 or x86_64
-#SDKMACHINE = "x86_64"
+SDKMACHINE = "x86_64"
 
 EXTRA_IMAGE_FEATURES = "debug-tweaks"
 
