--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,12 +1,12 @@
 # Local configuration for meta-bbb images
-# Yocto Project 2.3 Poky distribution [pyro] branch
+# Yocto Project 2.4 Poky distribution [rocko] branch
 # This is a sysvinit system
 
 LICENSE_FLAGS_WHITELIST = "commercial"
 
 DISTRO_FEATURES = "ext2 usbhost ${DISTRO_FEATURES_LIBC}"
 
-# remove opengl so opencv builds cleanly, remove pulseaudio since it brings in x11
+# remove pulseaudio since it brings in x11
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio opengl"
 
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
@@ -21,9 +21,9 @@ MACHINE = "beaglebone"
 
 #DL_DIR = "${HOME}/oe-sources"
 
-#SSTATE_DIR = "/oe7/bbb/sstate-cache"
+#SSTATE_DIR = "/oe8/bbb/sstate-cache"
 
-#TMPDIR = "/oe7/bbb/tmp-pyro"
+#TMPDIR = "/oe8/bbb/tmp-rocko"
 
 DISTRO = "poky"
 
