--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -11,7 +11,7 @@ require conf/machine/include/soc-family.inc
 require conf/machine/include/tune-cortexa8.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
-#PREFERRED_PROVIDER_virtual/kernel = "ti-linux"
+KERNEL_IMAGETYPE = "zImage"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 PREFERRED_PROVIDER_u-boot = "u-boot"
@@ -19,12 +19,12 @@ PREFERRED_PROVIDER_u-boot = "u-boot"
 UBOOT_ENTRYPOINT = "0x80008000"
 UBOOT_LOADADDRESS = "0x80008000"
 UBOOT_MACHINE = "am335x_boneblack_config"
+BOOTENV_SIZE = "0x20000"
 
 EXTRA_IMAGEDEPENDS += "u-boot"
 
 SERIAL_CONSOLE = "115200 ttyO0"
 
-IMAGE_FSTYPES = "tar.xz"
+IMAGE_FSTYPES = "tar.xz ext4"
 
 MACHINE_FEATURES = "ext2 serial usbhost vfat"
-
