Move KERNEL_IMAGETYPE to machine conf so mender can see it

--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -12,6 +12,7 @@ require conf/machine/include/tune-cortexa8.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
 #PREFERRED_PROVIDER_virtual/kernel = "ti-linux"
+KERNEL_IMAGETYPE = "zImage"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 PREFERRED_PROVIDER_u-boot = "u-boot"
