--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -26,7 +26,7 @@ EXTRA_IMAGEDEPENDS += "u-boot"
 
 SERIAL_CONSOLE = "115200 ttyO0"
 
-IMAGE_FSTYPES = "tar.xz"
+IMAGE_FSTYPES = "tar.xz ext4"
 
 MACHINE_FEATURES = "ext2 serial usbhost vfat"
 
