Upgrade to sumo

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -6,5 +6,6 @@ BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend ${LAYE
 
 BBFILE_COLLECTIONS += "meta-bbb"
 BBFILE_PATTERN_meta-bbb := "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-bbb = "8"
+BBFILE_PRIORITY_meta-bbb = "16"
 
+LAYERSERIES_COMPAT_meta-bbb = "sumo"
