Add 4.17 kernel recipe

--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -28,5 +28,7 @@ SERIAL_CONSOLE = "115200 ttyO0"
 
 IMAGE_FSTYPES = "tar.xz ext4"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel-image kernel-devicetree"
+
 MACHINE_FEATURES = "ext2 serial usbhost vfat"
 
