--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -6,11 +6,11 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  ${HOME}/poky-sumo/meta \
-  ${HOME}/poky-sumo/meta-poky \
-  ${HOME}/poky-sumo/meta-openembedded/meta-oe \
-  ${HOME}/poky-sumo/meta-openembedded/meta-networking \
-  ${HOME}/poky-sumo/meta-openembedded/meta-python \
-  ${HOME}/poky-sumo/meta-qt5 \
+  ${HOME}/poky-thud/meta \
+  ${HOME}/poky-thud/meta-poky \
+  ${HOME}/poky-thud/meta-openembedded/meta-oe \
+  ${HOME}/poky-thud/meta-openembedded/meta-networking \
+  ${HOME}/poky-thud/meta-openembedded/meta-python \
+  ${HOME}/poky-thud/meta-qt5 \
   ${HOME}/bbb/meta-bbb \
 "
