--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -24,7 +24,7 @@ BOOTENV_SIZE = "0x20000"
 
 EXTRA_IMAGEDEPENDS += "u-boot"
 
-SERIAL_CONSOLE = "115200 ttyO0"
+SERIAL_CONSOLES = "115200;ttyO0"
 
 IMAGE_FSTYPES = "tar.xz ext4"
 
