--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Local configuration for meta-bbb images
-# Yocto Project 2.6 Poky distribution [thud] branch
+# Yocto Project 2.7 Poky distribution [warrior] branch
 # This is a sysvinit system
 
 LICENSE_FLAGS_WHITELIST = "commercial"
@@ -14,14 +14,14 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
-# Default is 4.19, but 4.14 has more custom dts files
-# PREFERRED_VERSION_linux-stable = "4.14.%"
+# Default is 5.0, but you can change versions here 
+# PREFERRED_VERSION_linux-stable = "4.19.%"
 
 MACHINE = "beaglebone"
 
 #DL_DIR = "${HOME}/oe-sources"
-#SSTATE_DIR = "/oe8/bbb/sstate-cache"
-#TMPDIR = "/oe8/bbb/tmp-thud"
+#SSTATE_DIR = "/oe7/bbb/sstate-cache"
+#TMPDIR = "/oe7/bbb/tmp-warrior"
 
 DISTRO = "poky"
 
