--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -2,6 +2,8 @@
 # Yocto Project 2.7 Poky distribution [warrior] branch
 # This is a sysvinit system
 
+BBMASK = "meta-networking/recipes-kernel/wireguard"
+
 LICENSE_FLAGS_WHITELIST = "commercial"
 
 DISTRO_FEATURES = "ext2 usbhost ${DISTRO_FEATURES_LIBC}"
