--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Local configuration for meta-bbb images
-# Yocto Project 2.7 Poky distribution [warrior] branch
+# Yocto Project 2.8 Poky distribution [zeus] branch
 # This is a sysvinit system
 
 BBMASK = "meta-networking/recipes-kernel/wireguard"
@@ -16,14 +16,14 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
-# Default is 5.0, but you can change versions here 
+# Default is 5.3, but you can change versions here 
 # PREFERRED_VERSION_linux-stable = "4.19.%"
 
 MACHINE = "beaglebone"
 
 #DL_DIR = "${HOME}/oe-sources"
-#SSTATE_DIR = "/oe7/bbb/sstate-cache"
-#TMPDIR = "/oe7/bbb/tmp-warrior"
+#SSTATE_DIR = "/oe4/bbb/sstate-cache"
+#TMPDIR = "/oe4/bbb/tmp-zeus"
 
 DISTRO = "poky"
 
@@ -33,15 +33,15 @@ PACKAGE_CLASSES = "package_ipk"
 SDKMACHINE = "x86_64"
 
 # for no root password
-#EXTRA_IMAGE_FEATURES = "debug-tweaks"
+EXTRA_IMAGE_FEATURES = "debug-tweaks"
 
 # to enable a root password of jumpnowtek
-INHERIT += "extrausers"
-EXTRA_USERS_PARAMS = "usermod -P jumpnowtek root; "
+#INHERIT += "extrausers"
+#EXTRA_USERS_PARAMS = "usermod -P jumpnowtek root; "
 
 # to force a password change on first login
-INHERIT += "chageusers"
-CHAGE_USERS_PARAMS = "chage -d0 root; "
+#INHERIT += "chageusers"
+#CHAGE_USERS_PARAMS = "chage -d0 root; "
 
 USER_CLASSES = "image-mklibs image-prelink"
 
