--- a/recipes-kernel/linux/linux-stable-5.4/dts/bbb-4dcape43t.dts
+++ b/recipes-kernel/linux/linux-stable-5.4/dts/bbb-4dcape43t.dts
@@ -45,36 +45,48 @@
 };
 
 &am33xx_pinmux {
-	lcd_pins: lcd_pins {
+	lcd_pins: pinmux-lcd-pins {
 		pinctrl-single,pins = <
-			0xa0 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data0 */
-			0xa4 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data1 */
-			0xa8 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data2 */
-			0xac (PIN_OUTPUT | MUX_MODE0)            /* lcd_data3 */
-			0xb0 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data4 */
-			0xb4 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data5 */
-			0xb8 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data6 */
-			0xbc (PIN_OUTPUT | MUX_MODE0)            /* lcd_data7 */
-			0xc0 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data8 */
-			0xc4 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data9 */
-			0xc8 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data10 */
-			0xcc (PIN_OUTPUT | MUX_MODE0)            /* lcd_data11 */
-			0xd0 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data12 */
-			0xd4 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data13 */
-			0xd8 (PIN_OUTPUT | MUX_MODE0)            /* lcd_data14 */
-			0xdc (PIN_OUTPUT | MUX_MODE0)            /* lcd_data15 */
-			0xe0 (PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_vsync */
-			0xe4 (PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_hsync */
-			0xe8 (PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_pclk */
-			0xec (PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_ac_bias_en */
+			AM33XX_IOPAD(0x8a0, PIN_OUTPUT | MUX_MODE0)            /* lcd_data0 */
+			AM33XX_IOPAD(0x8a4, PIN_OUTPUT | MUX_MODE0)            /* lcd_data1 */
+			AM33XX_IOPAD(0x8a8, PIN_OUTPUT | MUX_MODE0)            /* lcd_data2 */
+			AM33XX_IOPAD(0x8ac, PIN_OUTPUT | MUX_MODE0)            /* lcd_data3 */
+			AM33XX_IOPAD(0x8b0, PIN_OUTPUT | MUX_MODE0)            /* lcd_data4 */
+			AM33XX_IOPAD(0x8b4, PIN_OUTPUT | MUX_MODE0)            /* lcd_data5 */
+			AM33XX_IOPAD(0x8b8, PIN_OUTPUT | MUX_MODE0)            /* lcd_data6 */
+			AM33XX_IOPAD(0x8bc, PIN_OUTPUT | MUX_MODE0)            /* lcd_data7 */
+			AM33XX_IOPAD(0x8c0, PIN_OUTPUT | MUX_MODE0)            /* lcd_data8 */
+			AM33XX_IOPAD(0x8c4, PIN_OUTPUT | MUX_MODE0)            /* lcd_data9 */
+			AM33XX_IOPAD(0x8c8, PIN_OUTPUT | MUX_MODE0)            /* lcd_data10 */
+			AM33XX_IOPAD(0x8cc, PIN_OUTPUT | MUX_MODE0)            /* lcd_data11 */
+			AM33XX_IOPAD(0x8d0, PIN_OUTPUT | MUX_MODE0)            /* lcd_data12 */
+			AM33XX_IOPAD(0x8d4, PIN_OUTPUT | MUX_MODE0)            /* lcd_data13 */
+			AM33XX_IOPAD(0x8d8, PIN_OUTPUT | MUX_MODE0)            /* lcd_data14 */
+			AM33XX_IOPAD(0x8dc, PIN_OUTPUT | MUX_MODE0)            /* lcd_data15 */
+			AM33XX_IOPAD(0x8e0, PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_vsync */
+			AM33XX_IOPAD(0x8e4, PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_hsync */
+			AM33XX_IOPAD(0x8e8, PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_pclk */
+			AM33XX_IOPAD(0x8ec, PIN_OUTPUT_PULLDOWN | MUX_MODE0)   /* lcd_ac_bias_en */
 			/* LCD enable */
-			0x1a4 (PIN_OUTPUT_PULLUP | MUX_MODE7)    /* P9.27, gpio3_19 */
+			AM33XX_IOPAD(0x9a4, PIN_OUTPUT_PULLUP | MUX_MODE7)     /* P9.27, gpio3_19 */
 		>;
 	};
 
-	backlight_pin: backlight_pin {
-		pinctrl-single,pins = < 0x48 (PIN_OUTPUT_PULLUP | MUX_MODE7) >; /* P9.14, gpio1[18] */
+	backlight_pins: pinmux-backlight-pins {
+		pinctrl-single,pins = <
+			AM33XX_IOPAD(0x848, PIN_OUTPUT_PULLDOWN | MUX_MODE6)   /* P9.14, ehrpwm1A */
+		>;
 	};
+};
+
+&epwmss1 {
+	status = "okay";
+};
+
+&ehrpwm1 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&backlight_pins>;
 };
 
 &lcdc {
@@ -124,11 +136,11 @@
 
 	backlight {
 		status = "okay";
-		compatible = "gpio-backlight";
-		pinctrl-names = "default";
-		pinctrl-0 = <&backlight_pin>;
-		gpios = <&gpio1 18 GPIO_ACTIVE_HIGH>; /* P9.14 */
-		default-on;
+		compatible = "pwm-backlight";
+		pwms = <&ehrpwm1 0 5000000 0>;
+		brightness-levels = <0 1 2 3 4 5 6 7 8 9 10>;
+		num-interpolated-steps = <10>;
+		default-brightness-level = <10>;
 	};
 };
 
