--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,15 +1,11 @@
 # Local configuration for meta-bbb images
-# Yocto Project 3.0 Poky distribution [zeus] branch
+# Yocto Project 3.1 Poky distribution [dunfell] branch
 # This is a sysvinit system
 
 # mask wireguard from meta-openembedded/meta-networking
 # use version in meta-jumpnow to support kernels < 5.6
 # with wireguard-linux-compat
 BBMASK = "meta-networking/recipes-kernel/wireguard"
-
-# mask cryptodev from poky/meta
-# use version from meta-jumpnow to support kernels > 5.4
-BBMASK += "meta/recipes-kernel/cryptodev"
 
 LICENSE_FLAGS_WHITELIST = "commercial"
 
