--- a/conf/machine/beaglebone.conf
+++ b/conf/machine/beaglebone.conf
@@ -6,8 +6,6 @@ SOC_FAMILY = "ti335x"
 TARGET_ARCH = "arm"
 
 DEFAULTTUNE ?= "cortexa8hf-neon"
-
-require conf/machine/include/soc-family.inc
 require conf/machine/include/arm/armv7a/tune-cortexa8.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
@@ -15,17 +13,15 @@ KERNEL_IMAGETYPE = "zImage"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 PREFERRED_PROVIDER_u-boot = "u-boot"
-
-UBOOT_ENTRYPOINT = "0x80008000"
-UBOOT_LOADADDRESS = "0x80008000"
+SPL_BINARY = "MLO"
+UBOOT_SUFFIX = "img"
 UBOOT_MACHINE = "am335x_evm_config"
-BOOTENV_SIZE = "0x20000"
 
-EXTRA_IMAGEDEPENDS += "u-boot"
+EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
 
-SERIAL_CONSOLES = "115200;ttyO0"
+SERIAL_CONSOLES = "115200:ttyS0 115200;ttyO0 115200:ttyAMA0"
 
-IMAGE_FSTYPES = "tar.xz ext4"
+IMAGE_FSTYPES = "tar.gz"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel-image kernel-devicetree kernel-modules"
 
