Add KERNEL_DTB var for modifying fdtfile in boot.scr

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -11,6 +11,9 @@ INIT_MANAGER = "systemd"
 
 MACHINE = "beaglebone"
 
+# change this to modify fdtfile in boot.scr
+KERNEL_DTB = "am336x-boneblack.dtb"
+
 PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
 
 #DL_DIR = "/src/scarthgap"
